package com.projeto.software.rede_mais_social.controller;

import com.projeto.software.rede_mais_social.model.PedidoAfiliacao;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.RequestBody;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/afiliacao")
public class AfiliacaoController {

}
